Revision history for HO-class
0.0?? - 2018-??-??
* skip also init method in mixins

0.078 - 2018-09-10
* homepage update - ho development has it's own org
* mixins are worky

0.077 - 2018-09-05
* add our to %classes declaration in HO::accessor::import
* start HO::mixin helper

0.076 - 2018-08-24
* fix bug in lvalue acessors, currently for lvalue accessors the correct
  index is only available during runtime

0.075 - 2018-08-24
* change alias implementation, the former one breaks with inheritence
* added BUGS section in pod

0.074 - 2018-08-17
* let accessors use the index defined by new constructor

0.073 - 2018-07-22
* improve abstract method testing (DOES was missing in perl 5.8)

0.072 - 2018-07-21
* more release testing
* made HO::abstract method compatible with Test::AbstractMethod

0.071 - 2018-07-20
* first release on PAUSE

0.07 - 2017-04-20
* support for default values in _ro and _rw accessors
* make_subclass class method removed from HO::class

0.06 - 2012-05-07
* more tests
* rw array accessors can now shift, pop and some splicing
* fixed a bug in HO::abstract

0.05
* first public version

0.4 2009-07-22
* always store the base method in the object



