@@ -1,6 +1,7 @@
 Revision history for HO-class
 0.0?? - 2018-??-??
 * skip also init method in mixins
+* implement "without" and "only" options for mixin methods
 
 0.078 - 2018-09-10
 * homepage update - ho development has it's own org
